fix the pokemon controller error handle
