# middleware/validate.js
@@ -5,11 +5,12 @@ const savePokemon = (req, res, next) => {
   
     pokemonname: 'required|string',
     type: 'required|string',
-    HP: 'required|string',
-    Attack: 'string',
-    Defense: 'string',
-    speed: 'string',
+    HP: 'integer',
+    Attack: 'integer',
+    Defense: 'integer',
+    speed: 'integer',
     image: 'required|string',
+    pokedexNumber : 'integer'
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
